# Mutell-Demo

./: .env.example  .gitignore  AGENTS.md  API_MANUAL.md  API_SUGGESTIONS.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai_engine/: factory.py  prompt_builder.py
backend/app/core/: config.py  crypto.py  database.py  deps.py  middleware.py  security.py
backend/app/models/: __init__.py  aggregated_evaluation.py  ai_provider.py  audit_log.py  evaluation.py  note.py  notification_setting.py  plan.py  report.py  slot.py  tenant.py  tenant_ai_config.py  terminal.py  user.py
backend/app/routers/: admin.py  aggregations.py  ai_configs.py  analytics.py  auth.py  dashboard.py  evaluations.py  notes.py  plans.py  reports.py  settings.py  slots.py  tenants.py  terminals.py  users.py
backend/app/schemas/: aggregation.py  ai_config.py  analytics.py  auth.py  common.py  evaluation.py  note.py  notification.py  plan.py  report.py  slot.py  tenant.py  terminal.py  user.py
backend/app/services/: aggregation_service.py  analytics_service.py  auth_service.py  evaluation_service.py  notification_service.py  report_service.py  slot_service.py
backend/app/workers/: aggregation_worker.py  celery_app.py  db.py  eval_scheduler.py  eval_semaphore.py  evaluation_worker.py  report_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_audit_log.py  0003_user_reset_tokens.py  0004_add_indexes.py  0005_provider_api_key.py  0006_notification_settings.py  0007_tenant_config_nullable_apikey.py  (+4 more)
backend/scripts/: run_load_test.py  seed.py
backend/tests/: conftest.py  test_admin.py  test_aggregations.py  test_ai_configs.py  test_auth.py  test_evaluations.py  test_health.py  test_new_suggestions.py  test_notes.py  test_plans.py  test_rbac_and_features.py  test_reports.py  test_security.py  test_slots.py  test_tenants.py  test_terminals.py  test_users.py
terminal-agent/: .env.example  Dockerfile  README.md  pyproject.toml
terminal-agent/config/: settings.py
terminal-agent/src/: buffer.py  recorder.py  retry.py  slot.py  sync.py  uploader.py
(+247 files in other folders)
